--- a/pepesugar/system/roles/packages/tasks/installers/install_docker.yml
+++ b/pepesugar/system/roles/packages/tasks/installers/install_docker.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Docker via external role
-  include_role:
-    name: pepesugar.system.packages_docker
+  ansible.builtin.include_role:
+      name: pepesugar.system.packages_docker
   vars:
-    docker_install_compose_plugin: true
+      docker_install_compose_plugin: true
