--- a/pepesugar/system/roles/packages/meta/main.yml
+++ b/pepesugar/system/roles/packages/meta/main.yml
@@ -1,19 +1,32 @@
 ---
 galaxy_info:
-  author: aki
-  description: your role description
-  company: pepesugar
+    author: riggidal
+    description: the role for installing packages
+    company: pepesugar
 
-  platforms:
-    - name: EL
-      versions: ["7", "8", "9"]
-    - name: Ubuntu
-      versions: [focal, jammy]
+    platforms:
+        - name: EL
+          versions:
+              - "8"
+              - "9"
+        - name: AlmaLinux
+          versions:
+              - "8"
+              - "9"
+        - name: Debian
+          versions:
+              - bullseye
+              - bookworm
+        - name: Ubuntu
+          versions:
+              - focal
+              - jammy
+              - noble
 
-  license: GPL-3.0-only
+    license: GPL-3.0-only
 
-  min_ansible_version: "2.1"
+    min_ansible_version: "2.1"
 
-  galaxy_tags: [applications, packages, linux]
+    galaxy_tags: [applications, packages, linux]
 
 dependencies: []
