--- a/pepesugar/security/roles/manage_users/tasks/validate.yml
+++ b/pepesugar/security/roles/manage_users/tasks/validate.yml
@@ -1,7 +1,8 @@
+---
 - name: Validate user configuration
-  fail:
+  ansible.builtin.fail:
     msg: "{{ item.key }} is not defined within manage_users_global"
   when:
     - item.key not in (manage_users_global.users | default({}, true)).keys()
-  with_dict: 
+  with_dict:
     - "{{ manage_users | default({}, true) }}"
