--- a/pepesugar/services/roles/deploy_registry_mirror/tasks/2_run_compose.yml
+++ b/pepesugar/services/roles/deploy_registry_mirror/tasks/2_run_compose.yml
@@ -1,6 +1,7 @@
+---
 - name: Start Registry mirror via docker-compose.yml
-  become: yes  
-  shell:
+  become: true
+  ansible.builtin.command:
     cmd: "docker compose up -d"
   args:
     chdir: "{{ config_root }}/{{ role_name }}"
