--- a/pepesugar/monitoring/roles/deploy_monitoring/tasks/1_sync_source_files.yml
+++ b/pepesugar/monitoring/roles/deploy_monitoring/tasks/1_sync_source_files.yml
@@ -1,6 +1,7 @@
+---
 - name: Ensure destination directory exists
-  become: yes
-  file:
+  become: true
+  ansible.builtin.file:
     path: "{{ config_root }}/{{ role_name }}"
     state: directory
     owner: root
@@ -8,11 +9,11 @@
     mode: "0755"
 
 - name: Sync monitoring config repo to target host
-  synchronize:
+  ansible.posix.synchronize:
     src: "{{ deploy_monitoring.path }}/"
     dest: "{{ config_root }}/{{ role_name }}/"
-    delete: yes
-    recursive: yes
+    delete: true
+    recursive: true
     rsync_opts:
       - "--rsync-path='sudo rsync'"
   delegate_to: localhost
