--- a/pepesugar/monitoring/roles/deploy_monitoring_agents/meta/main.yml
+++ b/pepesugar/monitoring/roles/deploy_monitoring_agents/meta/main.yml
@@ -1,26 +1,24 @@
 ---
 galaxy_info:
-  author: DevOps Team
-  license: MIT
-  min_ansible_version: "2.9"
-  platforms:
-    - name: Ubuntu
-      versions:
-        - bionic
-        - focal
-    - name: Debian
-      versions:
-        - buster
-    - name: RedHat
-      versions:
-        - "7"
-        - "8"
-  galaxy_tags:
-    - monitoring
-    - agents
-    - node-exporter
+    author: riggidal
+    license: MIT
+    min_ansible_version: "2.9"
+    platforms:
+        - name: Ubuntu
+          versions:
+              - bionic
+              - focal
+        - name: Debian
+          versions:
+              - buster
+        - name: EL
+          versions:
+              - "7"
+              - "8"
+    galaxy_tags:
+        - monitoring
+        - agents
+        - node-exporter
 
 dependencies:
-  - role: software/install_docker
-  - role: monitoring/deploy_monitoring
-
+    - role: pepesugar.system.packages
