--- a/pepesugar/monitoring/roles/deploy_monitoring_agents/tasks/2_start_agents.yml
+++ b/pepesugar/monitoring/roles/deploy_monitoring_agents/tasks/2_start_agents.yml
@@ -1,6 +1,7 @@
+---
 - name: Start monitoring agents via docker-compose.yml
-  become: yes  
-  shell:
+  become: true
+  ansible.builtin.command:
     cmd: "docker compose up -d --force-recreate"
   args:
     chdir: "{{ config_root }}/{{ role_name }}"
