--- a/pepesugar/security/roles/configure_certbot/meta/main.yml
+++ b/pepesugar/security/roles/configure_certbot/meta/main.yml
@@ -1,21 +1,19 @@
 ---
 galaxy_info:
-  author: DevOps Team
-  license: MIT
-  min_ansible_version: "2.9"
-  platforms:
-    - name: Ubuntu
-      versions:
-        - bionic
-        - focal
-    - name: Debian
-      versions:
-        - buster
-  galaxy_tags:
-    - certificate
-    - ssl
+    author: riggidal
+    license: MIT
+    min_ansible_version: "2.9"
+    platforms:
+        - name: Ubuntu
+          versions:
+              - bionic
+              - focal
+        - name: Debian
+          versions:
+              - buster
+    galaxy_tags:
+        - certificate
+        - ssl
 
 dependencies:
-  - role: software/install_certbot
-  - role: software/install_docker
-
+    - role: pepesugar.system.packages
