--- a/pepesugar/security/roles/create_certificate/meta/main.yml
+++ b/pepesugar/security/roles/create_certificate/meta/main.yml
@@ -1,24 +1,23 @@
 ---
 galaxy_info:
-  author: DevOps Team
-  license: MIT
-  min_ansible_version: "2.9"
-  platforms:
-    - name: Ubuntu
-      versions:
-        - bionic
-        - focal
-    - name: Debian
-      versions:
-        - buster
-    - name: RedHat
-      versions:
-        - "7"
-        - "8"
-  galaxy_tags:
-    - certificate
-    - ssl
-    - security
+    author: riggidal
+    license: MIT
+    min_ansible_version: "2.9"
+    platforms:
+        - name: Ubuntu
+          versions:
+              - bionic
+              - focal
+        - name: Debian
+          versions:
+              - buster
+        - name: EL
+          versions:
+              - "7"
+              - "8"
+    galaxy_tags:
+        - certificate
+        - ssl
+        - security
 
 dependencies: []
-
