--- a/pepesugar/security/roles/manage_users/tasks/delete_users.yml
+++ b/pepesugar/security/roles/manage_users/tasks/delete_users.yml
@@ -1,13 +1,12 @@
+---
 - name: Remove unused users
-  become: yes
-  user:
+  become: true
+  ansible.builtin.user:
     name: "{{ item.key }}"
     state: absent
     remove: true
   when:
     - item.key not in (manage_users | default({}, true)).keys()
     - item.key not in ['root']
-  with_dict: 
+  with_dict:
     - "{{ manage_users_global.users | default({}, true) }}"
-
-
