--- a/pepesugar/services/roles/deploy_gitlab_runners/tasks/1_sync_source_files.yml
+++ b/pepesugar/services/roles/deploy_gitlab_runners/tasks/1_sync_source_files.yml
@@ -1,22 +1,23 @@
+---
 - name: Prepare directories on the remote server
-  become: yes
-  file:
+  become: true
+  ansible.builtin.file:
     path: "{{ config_root }}/{{ role_name }}/{{ item.name }}"
     state: directory
     owner: root
     group: root
-    mode: 0755
-    recurse: yes
+    mode: "0755"
+    recurse: true
   with_items:
     - "{{ runners }}"
   loop_control:
     label: "{{ item.name }}"
 
 - name: Copy docker-compose.yml file to deploy Gitlab server
-  become: yes
-  template:
+  become: true
+  ansible.builtin.template:
     src: "docker-compose.yml.j2"
     dest: "{{ config_root }}/{{ role_name }}/docker-compose.yml"
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
