--- a/pepesugar/services/roles/deploy_gitlab_server/tasks/1_sync_source_files.yml
+++ b/pepesugar/services/roles/deploy_gitlab_server/tasks/1_sync_source_files.yml
@@ -1,20 +1,21 @@
+---
 - name: Prepare directories on the remote server
-  become: yes
-  file:
+  become: true
+  ansible.builtin.file:
     path: "{{ config_root }}/{{ item }}"
     state: directory
     owner: root
     group: root
-    mode: 0755
+    mode: "0755"
   with_items:
     - "{{ role_name }}"
     - "{{ role_name }}/src"
 
 - name: Copy docker-compose.yml file to deploy Gitlab server
-  become: yes
-  template:
+  become: true
+  ansible.builtin.template:
     src: "docker-compose.yml.j2"
     dest: "{{ config_root }}/{{ role_name }}/docker-compose.yml"
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
