--- a/pepesugar/services/roles/deploy_marzban/tasks/1_sync_source_files.yml
+++ b/pepesugar/services/roles/deploy_marzban/tasks/1_sync_source_files.yml
@@ -1,29 +1,30 @@
+---
 - name: Create iptables role directory
-  become: yes
-  file:
+  become: true
+  ansible.builtin.file:
     path: "{{ config_root }}/{{ role_name }}"
     state: directory
     owner: root
     group: root
-    mode: 0755
+    mode: "0755"
 
 - name: Copy firewall script to common servers
-  become: yes
-  template:
+  become: true
+  ansible.builtin.template:
     src: "{{ item }}.j2"
     dest: "{{ config_root }}/{{ role_name }}/{{ item }}"
     owner: root
     group: root
-    mode: 0770
+    mode: "0770"
   with_items:
     - systemd-iptables.sh
     - blacklist.rules
 
 - name: Copy Iptables systemd service
-  become: yes
-  template:
+  become: true
+  ansible.builtin.template:
     src: "iptables.service.j2"
     dest: "/etc/systemd/system/iptables.service"
     owner: root
     group: root
-    mode: 0660
+    mode: "0660"
