--- a/pepesugar/system/roles/packages_docker/handlers/main.yml
+++ b/pepesugar/system/roles/packages_docker/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
-- name: restart docker
-  service:
-    name: docker
-    state: "{{ docker_restart_handler_state }}"
+- name: Restart docker
+  ansible.builtin.service:
+      name: docker
+      state: "{{ packages_docker_restart_handler_state }}"
   ignore_errors: "{{ ansible_check_mode }}"
-  when: docker_service_manage | bool
+  when: packages_docker_service_manage | bool
