--- a/pepesugar/system/roles/packages_docker/tasks/docker-compose.yml
+++ b/pepesugar/system/roles/packages_docker/tasks/docker-compose.yml
@@ -1,31 +1,32 @@
 ---
 - name: Check current docker-compose version.
-  command: "{{ docker_compose_path }} --version"
-  register: docker_compose_vsn
+  ansible.builtin.command: "{{ packages_docker_compose_path }} --version"
+  register: packages_docker_compose_vsn
   check_mode: false
   changed_when: false
   failed_when: false
 
-- set_fact:
-    docker_compose_current_version: "{{ docker_compose_vsn.stdout | regex_search('(\\d+(\\.\\d+)+)') }}"
+- name: Set current docker-compose version.
+  ansible.builtin.set_fact:
+      packages_docker_compose_current_version: "{{ packages_docker_compose_vsn.stdout | regex_search('(\\d+(\\.\\d+)+)') }}"
   when: >
-    docker_compose_vsn.stdout is defined
-    and (docker_compose_vsn.stdout | length > 0)
+      packages_docker_compose_vsn.stdout is defined
+      and (packages_docker_compose_vsn.stdout | length > 0)
 
 - name: Delete existing docker-compose version if it's different.
-  file:
-    path: "{{ docker_compose_path }}"
-    state: absent
+  ansible.builtin.file:
+      path: "{{ packages_docker_compose_path }}"
+      state: absent
   when: >
-    docker_compose_current_version is defined
-    and (docker_compose_version | regex_replace('v', '')) not in docker_compose_current_version
+      packages_docker_compose_current_version is defined
+      and (packages_docker_compose_version | regex_replace('v', '')) not in packages_docker_compose_current_version
 
 - name: Install Docker Compose (if configured).
-  get_url:
-    url: "{{ docker_compose_url }}"
-    dest: "{{ docker_compose_path }}"
-    mode: 0755
+  ansible.builtin.get_url:
+      url: "{{ packages_docker_compose_url }}"
+      dest: "{{ packages_docker_compose_path }}"
+      mode: "0755"
   when: >
-    (docker_compose_current_version is not defined)
-    or (docker_compose_current_version | length == 0)
-    or (docker_compose_current_version is version((docker_compose_version | regex_replace('v', '')), '<'))
+      (packages_docker_compose_current_version is not defined)
+      or (packages_docker_compose_current_version | length == 0)
+      or (packages_docker_compose_current_version is version((packages_docker_compose_version | regex_replace('v', '')), '<'))
