--- a/pepesugar/system/roles/packages_docker/vars/Alpine.yml
+++ b/pepesugar/system/roles/packages_docker/vars/Alpine.yml
@@ -1,3 +1,3 @@
 ---
-docker_packages: "docker"
-docker_compose_package: docker-cli-compose
+packages_docker_packages: "docker"
+packages_docker_compose_package: docker-cli-compose
